--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,21 +15,30 @@
 	</head>
 	<body>
 
-		<script id="event" type="javascript/template">
+
+		<a href="">load</a>
+		<a href="#addevent">add</a>
+
+
+
+		<div id="form_place"></div>
+
+		<script id="event" type="text/template">
 			<p><%= title %></p>
 		</script>
 		
-		<script id="event_full" type="javascript/template">
+		<script id="event_full" type="text/template">
 			<p><%= title %></p>
 			<p><%= description %></p>
 		</script>
 
-		<script id="event_form" type="javascript/template">
+		<script id="event_form" type="text/template">
+		ewffewefw
 			<p><input name="title"></p>
 			<p><input name="descrition"></p>
 		</script>
 		
-		<script id="events" type="javascript/template">
+		<script id="events" type="text/template">
 			<div class="events_list"></div>
 		</script>
 		
