show events details

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -19,6 +19,7 @@
 		<a href="#addevent">add</a>
 
 		<div id="form_place"></div>
+		<div id="ev_details"></div>
 		<div id="ev_place"></div>
 
 		<script id="event" type="text/template">
