--- a/webapp/index.html
+++ b/webapp/index.html
@@ -41,7 +41,7 @@
 			<p><%= title %></p>
 			<p><%= description %></p>
 			<% _.each(tags, function (tag) { %>
-				<span> <%= tag %> </span>
+				<span> <%= tag.hashtag %> </span>
 			<% }) %>
 		</script>
 
