--- a/webapp/index.html
+++ b/webapp/index.html
@@ -63,7 +63,21 @@
 		</script>
 
 		<script id="event" type="text/template">
-			<p><%= title %></p>
+			<div class="ev-header">
+				<img src="http://placehold.it/200x80">
+			</div>
+			<div>
+				<h3><%= title %></h2>
+				<h2>22.12.2017</h2>
+			</div>
+			<div class="likes">
+				<p>33 лайки</p>
+				<p>11 хуяйки</p>
+			</div>
+			<div>
+				<p>lorem ipsun sddd sjh dshkds hdshsd sdkd skdsh d dskds</p>
+			</div>	
+			<p></p>
 		</script>
 
 		<script id="events" type="text/template">
