--- a/webapp/index.html
+++ b/webapp/index.html
@@ -104,7 +104,7 @@
 					<p><input name="ht"></p>
 					<p><input name="ht"></p>
 					<p><input name="ht"></p>
-					<p><button name="save">save</button></p>
+					<p><button name="save">save</button><button name="close">close</button></p>
 				</div>
 			</div>
 		</script>
